--- a/lightdm/lightdm-webkit2-greeter.conf
+++ b/lightdm/lightdm-webkit2-greeter.conf
@@ -19,7 +19,7 @@ secure_mode         = true
 time_format         = LT
 time_language       = auto
 webkit_theme        = antergos
-time_format	    = HH:mm
+time_format         = HH:mm
 
 #
 # [branding]
@@ -33,4 +33,4 @@ time_format	    = HH:mm
 [branding]
 background_images = /usr/share/backgrounds
 logo              = /usr/share/pixmaps/archlinux-logo.svg
-user_image        = /usr/share/pixmaps/archlinux-user.svg
+user_image        = /usr/share/backgrounds/title_logo.png
