--- a/i3/config
+++ b/i3/config
@@ -237,14 +237,14 @@ bindsym $mod+Shift+n exec --no-startup-id nautilus
 bindsym $mod+Shift+asciitilde exec --no-startup-id terminator -T neofetch -e "neofetch&&zsh"
 
 #Restore workspace 1 layout
-exec --no-startup-id "i3-msg 'workspace number 1 ; append_layout /home/akss13/.config/i3/workspace-1.json'"
+#exec --no-startup-id "i3-msg 'workspace number 1 ; append_layout /home/akss13/.config/i3/workspace-1.json'"
 workspace $ws1 gaps inner 25
 
-exec --no-startup-id spotify
+#exec --no-startup-id spotify
 assign [class="Spotify"] $ws1
-exec --no-startup-id xpad
+#exec --no-startup-id xpad
 assign [class="xpad"] $ws1
-exec --no-startup-id rhythmbox
+#exec --no-startup-id rhythmbox
 assign [class="Rhythmbox"] $ws1
 
 #Start i3 on worksapce 2
